homepage-and-collection-page-update

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
     <link rel="stylesheet" href="./assets/hero-sec.css">
+    <link rel="stylesheet" href="./assets/businnes-sec.css">
+    <link rel="stylesheet" href="./assets/guide-sec.css">
+    <link rel="stylesheet" href="./assets/networking-sec.css">
+    <link rel="stylesheet" href="./assets/slick-min.css">
+    <link rel="stylesheet" href="./assets/slick-theme.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header">
         <div class="header-top">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-between gap-1">
                     <div class="d-flex align-items-center flex-wrap gap-2">
-                        <a href="mailto:info@altatechnologies.com" class="text-black"><img src="./assets/mail-ico.svg" alt="mail-ico" width="16" height="11"><span style="margin-left: 4px;">info@altatechnologies.com</span></a>
-                        <a href="tel:763-475-2900" class="text-black"><img src="./assets/phone-ico.svg" alt="mail-ico" width="12" height="12"><span style="margin-left: 4px;">763-475-2900</span></a>
+                        <a href="mailto:info@altatechnologies.com" class="text-black"><img src="./assets/mail-ico.svg"
+                                alt="mail-ico" width="16" height="11"><span
+                                style="margin-left: 4px;">info@altatechnologies.com</span></a>
+                        <a href="tel:763-475-2900" class="text-black"><img src="./assets/phone-ico.svg" alt="mail-ico"
+                                width="12" height="12"><span style="margin-left: 4px;">763-475-2900</span></a>
                     </div>
                     <div class="d-flex align-items-center flex-wrap gap-2">
-                        <a href="tel:800-546-2582" class="text-black"><img src="./assets/support-ico.svg" alt="mail-ico" width="12" height="12"><span style="margin-left: 4px;">800-546-2582</span></a>
-                        <a href="#" class="text-black"><img src="./assets/server-ico.svg" alt="mail-ico" width="16" height="11"><span style="margin-left: 4px;">Sell Us Your Equipment</span></a>
+                        <a href="tel:800-546-2582" class="text-black"><img src="./assets/support-ico.svg" alt="mail-ico"
+                                width="12" height="12"><span style="margin-left: 4px;">800-546-2582</span></a>
+                        <a href="#" class="text-black"><img src="./assets/server-ico.svg" alt="mail-ico" width="16"
+                                height="11"><span style="margin-left: 4px;">Sell Us Your Equipment</span></a>
                     </div>
                 </div>
             </div>
@@ -42,8 +54,213 @@
             </nav>
         </div>
     </header>
-
-
+    <section style="background-color: var(--primary-light);" class="networking-sec">
+        <div class="container">
+            <div class="row g-3">
+                <div class="col-lg-6">
+                    <span class="h2 d-block text-center mb-3">What They Say</span>
+                    <div class="reviews-slider">
+                        <div class="slick-items">
+                            <div class="card">
+                                <span class="d-block fs-18 font-neueplak-semibold mb-1">Huge Inventory</span>
+                                <p>"Aisles and aisles of servers & IT equipment. Experts at what they do."</p>
+                                <div class="client-info d-flex gap-2">
+                                    <img style="border-radius: 50%;" src="./assets/client-img.webp" width="50"
+                                        height="50" alt="client-image">
+                                    <div>
+                                        <span class="d-block fs-18 font-neueplak-text-bold">Ryan W</span>
+                                        <p>President, Priority Envelope</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex align-items-center gap-1">
+                                    <div style="gap: 2px;" class="reviews-icons d-flex">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                    </div>
+                                    <span class="d-block fs-14 font-neueplak-semibold">(5.0)</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick-items">
+                            <div class="card">
+                                <span class="d-block fs-18 font-neueplak-semibold mb-1">Huge Inventory</span>
+                                <p>"Aisles and aisles of servers & IT equipment. Experts at what they do."</p>
+                                <div class="client-info d-flex gap-2">
+                                    <img style="border-radius: 50%;" src="./assets/client-img.webp" width="50"
+                                        height="50" alt="client-image">
+                                    <div>
+                                        <span class="d-block fs-18 font-neueplak-text-bold">Ryan W</span>
+                                        <p>President, Priority Envelope</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex align-items-center gap-1">
+                                    <div style="gap: 2px;" class="reviews-icons d-flex">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                    </div>
+                                    <span class="d-block fs-14 font-neueplak-semibold">(5.0)</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slick-items">
+                            <div class="card">
+                                <span class="d-block fs-18 font-neueplak-semibold mb-1">Huge Inventory</span>
+                                <p>"Aisles and aisles of servers & IT equipment. Experts at what they do."</p>
+                                <div class="client-info d-flex gap-2">
+                                    <img style="border-radius: 50%;" src="./assets/client-img.webp" width="50"
+                                        height="50" alt="client-image">
+                                    <div>
+                                        <span class="d-block fs-18 font-neueplak-text-bold">Ryan W</span>
+                                        <p>President, Priority Envelope</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex align-items-center gap-1">
+                                    <div style="gap: 2px;" class="reviews-icons d-flex">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                        <img src="./assets/review-icon.svg" width="14" height="14" alt="review-icon">
+                                    </div>
+                                    <span class="d-block fs-14 font-neueplak-semibold">(5.0)</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="content-wrapper h-100 d-flex flex-column justify-content-center">
+                        <div class="inner-content">
+                            <h2 class="main-title">Buying Servers And Networking since 1995</h2>
+                            <p class="mb-3">Since 1995, we've poured all of our efforts into delivering tested systems
+                                and parts that
+                                help our resale clients win deals and keep clients.
+                                With our huge inventory and industry-leading engineers, customers tell us they trust
+                                Alta
+                                for our reliability, custom configurations, parts responsiveness, lightning fast
+                                delivery,
+                                and wholesale savings.</p>
+                            <a href="#" class="btn btn-primary d-block">Request A Bid</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="guide-sec">
+        <div class="container">
+            <div style="max-width: 530px;" class="mx-auto">
+                <h2 class="main-title text-center mb-2">Latest Guides & Articles</h2>
+                <p class="text-center mb-5">With our huge inventory and industry-leading engineers, customers tell us
+                    they trust Alta for our
+                    reliability, custom configurations, parts responsiveness, lightning fast delivery, and wholesale
+                    savings.</p>
+            </div>
+            <div class="row g-2">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="card">
+                        <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp" class="img-fluid mb-1"
+                            width="330" height="228" alt="guide-image">
+                        <div class="content-wrapper">
+                            <a style="text-decoration: underline;" href="#" class="d-block">Ultimate Guide</a>
+                            <div class="date-wrapper">20<br>Oct</div>
+                            <span class="d-block fs-20 font-neueplak-semibold">What are Used Servers?</span>
+                            <p class="mb-2">We often hear the words new, used, refurbished, or original to describe a
+                                server's stage
+                                of life - but what is the difference between these terms....</p>
+                            <a href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="16"
+                                    height="16" alt="arrow-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="card">
+                        <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp" class="img-fluid mb-1"
+                            width="330" height="228" alt="guide-image">
+                        <div class="content-wrapper">
+                            <a style="text-decoration: underline;" href="#" class="d-block">Ultimate Guide</a>
+                            <div class="date-wrapper">20<br>Oct</div>
+                            <span class="d-block fs-20 font-neueplak-semibold">What are Used Servers?</span>
+                            <p class="mb-2">We often hear the words new, used, refurbished, or original to describe a
+                                server's stage
+                                of life - but what is the difference between these terms....</p>
+                            <a href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="16"
+                                    height="16" alt="arrow-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="card">
+                        <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp" class="img-fluid mb-1"
+                            width="330" height="228" alt="guide-image">
+                        <div class="content-wrapper">
+                            <a style="text-decoration: underline;" href="#" class="d-block">Ultimate Guide</a>
+                            <div class="date-wrapper">20<br>Oct</div>
+                            <span class="d-block fs-20 font-neueplak-semibold">What are Used Servers?</span>
+                            <p class="mb-2">We often hear the words new, used, refurbished, or original to describe a
+                                server's stage
+                                of life - but what is the difference between these terms....</p>
+                            <a href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="16"
+                                    height="16" alt="arrow-icon"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section style="background-color: var(--primary-light);" class="business-sec">
+        <div class="container">
+            <h2 class="main-title text-center mb-5">Why Business Rely on ALTA</h2>
+            <div class="row g-2">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="card">
+                        <img src="./assets/business-card-icon.webp" class="d-block mx-auto mb-1" width="80" height="56"
+                            alt="business-icon">
+                        <span class="d-block mb-1 text-center fs-20 font-neueplak-semibold">Ship Today</span>
+                        <p class="text-center mb-1">Global Logistics and an IN-STOCK inventory allow us to ship your
+                            systems, switches or parts Today!</p>
+                        <p class="text-center mb-0">24/7 Emergency Parts Available for pickup as well.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="card">
+                        <img src="./assets/business-card-icon.webp" class="d-block mx-auto mb-1" width="80" height="56"
+                            alt="business-icon">
+                        <span class="d-block mb-1 text-center fs-20 font-neueplak-semibold">Ship Today</span>
+                        <p class="text-center mb-1">Global Logistics and an IN-STOCK inventory allow us to ship your
+                            systems, switches or parts Today!</p>
+                        <p class="text-center mb-0">24/7 Emergency Parts Available for pickup as well.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="card">
+                        <img src="./assets/business-card-icon.webp" class="d-block mx-auto mb-1" width="80" height="56"
+                            alt="business-icon">
+                        <span class="d-block mb-1 text-center fs-20 font-neueplak-semibold">Ship Today</span>
+                        <p class="text-center mb-1">Global Logistics and an IN-STOCK inventory allow us to ship your
+                            systems, switches or parts Today!</p>
+                        <p class="text-center mb-0">24/7 Emergency Parts Available for pickup as well.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="card">
+                        <img src="./assets/business-card-icon.webp" class="d-block mx-auto mb-1" width="80" height="56"
+                            alt="business-icon">
+                        <span class="d-block mb-1 text-center fs-20 font-neueplak-semibold">Ship Today</span>
+                        <p class="text-center mb-1">Global Logistics and an IN-STOCK inventory allow us to ship your
+                            systems, switches or parts Today!</p>
+                        <p class="text-center mb-0">24/7 Emergency Parts Available for pickup as well.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="container">
             <div class="footer-top">
@@ -104,6 +321,15 @@
             </div>
         </div>
     </footer>
-    
+
+
+
+    <script src="./assets/jquery.js"></script>
+    <script src="./assets/slick-min.js"></script>
+    <script src="./assets/main.js"></script>
+
+
+
 </body>
+
 </html
