--- a/model.html
+++ b/model.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
-    <link rel="stylesheet" href="./assets/circle-sec.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
-    <link rel="stylesheet" href="./assets/faq.css">
+    <link rel="stylesheet" href="./assets/rackmonut-sec.css">
+    <link rel="stylesheet" href="./assets/spacification-sec.css">
+    <link rel="stylesheet" href="./assets/businnes-sec.css">
     <link rel="stylesheet" href="./assets/slick-min.css">
     <link rel="stylesheet" href="./assets/slick-theme.css">
-    <link rel="stylesheet" href="./assets/businnes-sec.css">
     <title>Document</title>
 </head>
 
@@ -56,41 +56,51 @@
         </div>
     </header>
 
-    <section class="circle-sec pb-0">
+    <section class="contact-sec">
         <div class="container">
-            <h2 class="main-title text-center mb-5">Lenovo Server Offerings</h2>
-            <div class="row g-5">
-                <div class="col-lg-4 col-xs-6">
-                    <div class="image-wrapper">
-                        <img src="./assets/circle-sec-img-1.webp" class="img-fluid" width="255" height="255"
-                            alt="circle-image">
+            <div class="contact-form">
+                <h2 class="main-title text-center mb-3">Contact Form</h2>
+                <div class="row g-2">
+                    <div class="col-md-6">
+                        <div class="input-wrapper">
+                            <label class="font-neueplak-semibold">Your Full Name <span
+                                    style="color: var(--secondary);">*</span></label>
+                            <input type="text" class="form-control" placeholder="Enter name here...">
+                        </div>
                     </div>
-                    <span class="d-block font-neueplak-text-bold text-center">Used Lenovo
-                        Rackmount Servers</span>
-                </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div class="image-wrapper">
-                        <img src="./assets/circle-sec-img-1.webp" class="img-fluid" width="255" height="255"
-                            alt="circle-image">
+                    <div class="col-md-6">
+                        <div class="input-wrapper">
+                            <label class="font-neueplak-semibold">Your Email <span
+                                    style="color: var(--secondary);">*</span></label>
+                            <input type="email" class="form-control" placeholder="Enter email here...">
+                        </div>
                     </div>
-                    <span class="d-block font-neueplak-text-bold text-center">Used Lenovo
-                        Rackmount Servers</span>
-                </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div class="image-wrapper">
-                        <img src="./assets/circle-sec-img-1.webp" class="img-fluid" width="255" height="255"
-                            alt="circle-image">
+                    <div class="col-md-6">
+                        <div class="input-wrapper">
+                            <label class="font-neueplak-semibold">Phone Number</label>
+                            <input type="number" class="form-control" placeholder="Enter Number here...">
+                        </div>
                     </div>
-                    <span class="d-block font-neueplak-text-bold text-center">Used Lenovo
-                        Rackmount Servers</span>
+                    <div class="col-md-6">
+                        <div class="input-wrapper">
+                            <label class="font-neueplak-semibold">Subject / Title</label>
+                            <input type="text" class="form-control" placeholder="Enter Subject here...">
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="input-wrapper">
+                            <label class="font-neueplak-semibold">Comment <span
+                                    style="color: var(--secondary);">*</span></label>
+                            <textarea rows="4" class="form-control"
+                                placeholder="Type comment or query here..."></textarea>
+                        </div>
+                    </div>
+                    <div class="contact-buttons">
+                        <button class="btn btn-primary">I'm not a robot</button>
+                        <button class="btn btn-primary">Request A Bid</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="lenovo-sec">
-        <div class="container">
-            <h2 style="max-width: 530px;" class="main-title text-center mx-auto mb-5">Reliable Refurbished Lenovo Servers — Watch Now!</h2>
-            <iframe style="width: 100%; height: 612px; border-radius: 12px;" width="560" height="315" src="https://www.youtube.com/embed/S22w6rTlVwA?si=_D5xYmdkLQbLrK_1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
     <section style="background-color: var(--primary-light);" class="networking-sec">
@@ -192,95 +202,84 @@
             </div>
         </div>
     </section>
-    <section class="contact-sec pb-0">
+    <section class="rackmount-sec pb-0">
         <div class="container">
-            <div class="contact-form">
-                <h2 class="main-title text-center mb-3">Contact Form</h2>
-                <div class="row g-2">
-                    <div class="col-md-6">
-                        <div class="input-wrapper">
-                            <label class="font-neueplak-semibold">Your Full Name <span
-                                    style="color: var(--secondary);">*</span></label>
-                            <input type="text" class="form-control" placeholder="Enter name here...">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="input-wrapper">
-                            <label class="font-neueplak-semibold">Your Email <span
-                                    style="color: var(--secondary);">*</span></label>
-                            <input type="email" class="form-control" placeholder="Enter email here...">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="input-wrapper">
-                            <label class="font-neueplak-semibold">Phone Number</label>
-                            <input type="number" class="form-control" placeholder="Enter Number here...">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="input-wrapper">
-                            <label class="font-neueplak-semibold">Subject / Title</label>
-                            <input type="text" class="form-control" placeholder="Enter Subject here...">
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="input-wrapper">
-                            <label class="font-neueplak-semibold">Comment <span
-                                    style="color: var(--secondary);">*</span></label>
-                            <textarea rows="4" class="form-control" placeholder="Type comment or query here..."></textarea>
-                        </div>
-                    </div>
-                    <div class="contact-buttons">
-                        <button class="btn btn-primary">I'm not a robot</button>
-                        <button class="btn btn-primary">Request A Bid</button>
-                    </div>
+            <h2 class="main-title text-center mb-5">Lenovo Rackmount Server Models</h2>
+            <div class="row g-2 mb-5">
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
                 </div>
             </div>
+            <a href="#" class="d-block btn btn-primary mx-auto">Load More</a>
         </div>
     </section>
-    <section class="faq-sec">
+    <section class="default-sec half-sec content-left spacification-sec">
         <div class="container">
-            <h2 class="main-title mb-5 text-center">Frequently Asked Question</h2>
-            <div class="accordion mb-5">
-                <div class="accordion-item active">
-                    <div class="accordion-header">
-                        01. Are there any savings benefits with choosing refurbished lenovo servers from alta?
-                        <div class="icon">
-                            <span class="d-block plus">+</span>
-                            <span class="d-block minus">-</span>
-                        </div>
-                    </div>
-                    <div class="accordion-content show">
-                        <p>Certainly! Choosing our refurbished Lenovo servers can lead to significant cost savings, often ranging from 40-90% compared to new equipment. Not only do you benefit from reduced initial expenses, but you also get a product that has been rigorously tested and certified by our experts, ensuring value for your investment.
+            <div class="row gy-lg-0 gx-lg-5 gy-3 gx-0">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="content-wrapper h-100 d-flex flex-column justify-content-center">
+                        <h2 class="main-title mb-2">Lenovo RS160 Specifications</h2>
+                        <p class="mb-0"><strong>Form factor:</strong> 1U rack-mount</p>
+                        <p class="mb-0"><strong>Processor:</strong> Intel Xeon processor E3-1200 v5 product family with
+                            four cores up to 3.7 GHz, 8 MB cache, and up to 2133 MHz memory speed; or Intel
+                            Core i3 processor 6100/6300 product families with two cores up to 3.9 GHz, up to 4 MB cache,
+                            and
+                            2133 MHz memory speed; or Intel Pentium processor G4400/G4500 product families with two
+                            cores up
+                            to 3.6 GHz, 3 MB cache, and up to 2133 MHz memory speed.</p>
+                        <p class="mb-0"><strong>Chipset:</strong> Intel C232</p>
+                        <p class="mb-0"><strong>Memory:</strong> Four DIMM sockets. Support for ECC UDIMMs. DIMM speeds
+                            up
+                            to 2133 MHz.</p>
+                        <p class="mb-0"><strong>Memory Capacity:</strong> Up to 64 GB with four 16 GB UDIMMs</p>
+                        <p class="mb-0"><strong>Power Supply:</strong> One fixed 300 W AC (100 - 240 V) power supply (80
+                            PLUS Gold)</p>
+                        <p class="mb-0"><strong>Optical Drive Bays:</strong> One. Support for DVD-ROM or DVD-RW</p>
+                        <p class="mb-0"><strong>I/O Expansion Slots:</strong> Up to one PCIe 3.0 x16 (x16
+                            wired) low-profile
+                            slot with an optional riser card</p>
+                        <p class="mb-0"><strong>Dimensions: Height:</strong> 43 mm (1.7 in.), Width: 439 mm (17.3 in.),
+                            Depth: 411 mm (16.2 in.)</p>
+                        <p class="mb-5"><strong>Weight:</strong> Minimum: 6.2 kg (13.7 lb); Maximum: 7.6 kg (16.8 lb)
                         </p>
+                        <a href="#" class="btn btn-primary d-block">Get a Free Quote</a>
                     </div>
                 </div>
-                <div class="accordion-item">
-                    <div class="accordion-header">
-                        02. Are there any savings benefits with choosing refurbished lenovo servers from alta?
-                        <div class="icon">
-                            <span class="d-block plus">+</span>
-                            <span class="d-block minus">-</span>
-                        </div>
-                    </div>
-                    <div class="accordion-content ">
-                        <p>Certainly! Choosing our refurbished Lenovo servers can lead to significant cost savings, often ranging from 40-90% compared to new equipment. Not only do you benefit from reduced initial expenses, but you also get a product that has been rigorously tested and certified by our experts, ensuring value for your investment.</p>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <div class="accordion-header">
-                        03. Are there any savings benefits with choosing refurbished lenovo servers from alta?
-                        <div class="icon">
-                            <span class="d-block plus">+</span>
-                            <span class="d-block minus">-</span>
-                        </div>
-                    </div>
-                    <div class="accordion-content ">
-                        <p>Certainly! Choosing our refurbished Lenovo servers can lead to significant cost savings, often ranging from 40-90% compared to new equipment. Not only do you benefit from reduced initial expenses, but you also get a product that has been rigorously tested and certified by our experts, ensuring value for your investment.</p>
-                    </div>
+                <div class="col-lg-6 order-lg-1">
+                    <img src="./assets/spacification-img.webp" class="d-block mx-auto"
+                        style="border-radius: 18px; max-width: 530px;" width="530" height="666"
+                        alt="spacification-image">
                 </div>
             </div>
-            <a href="#" class="btn btn-primary d-block mx-auto">Ask A Query</a>
         </div>
     </section>
     <section style="background-color: var(--primary-light-2);" class="business-sec">
@@ -395,7 +394,7 @@
     <script src="./assets/jquery.js"></script>
     <script src="./assets/slick-min.js"></script>
     <script src="./assets/main.js"></script>
-    
+
 </body>
 
 </html
