--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/slick-theme.css">
     <link rel="stylesheet" href="./assets/industry-sec.css">
     <link rel="stylesheet" href="./assets/storage-sec.css">
+    <link rel="stylesheet" href="./assets/slide-icon.css">
     <title>Document</title>
 </head>
 
@@ -56,6 +57,29 @@
             </nav>
         </div>
     </header>
+    <section class="slide-icon">
+        <div class="container">
+            <div class="main-slider">
+                <div class="inner-slider">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                    <img src="./assets/slide-img-1.webp" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="default-sec half-sec content-right">
         <div class="container">
             <div class="row gy-lg-0 gy-5">
