--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="d-flex align-items-center gap-3 flex-wrap">
                             <a href="#" class="btn btn-primary d-block">Sell to Us</a>
                             <div class="btn-wrapper">
-                                <a href="#" class="btn btn-outline"><img src="./assets/phone-btn-icon.webp" width="16"
+                                <div href="#" class="btn btn-outline"><img src="./assets/phone-btn-icon.webp" width="16"
                                         height="16" alt="phone-icon">
                                     1-866-581-4540</a>
                             </div>
