hero sec update.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
             </nav>
         </div>
     </header>
+    <seciton class="hero-sec">
+        <div class="single-slider">
+            <div class="slider-item" style="background-image: url('./assets/hero-bg.webp');">
+                <div class="container">
+                    <div class="content-wrapper">
+                        <span class="d-block text-primary font-neueplak-semibold">Save on IT Hardware with the Global Leader</span>
+                        <h1 class="main-title">Save on IT Hardware with the Global Leader</h1>
+                        <p>Servers, Storage, Networking & Parts, fully tested by the reuse leader.</p>
+                        <ul class="list-with-icon mb-3 font-neueplak-semibold">
+                            <li class="list-item">Trusted by thousands since 1995</li>
+                            <li class="list-item">Triple tested & guaranteed</li>
+                            <li class="list-item">Ready to Ship SAME DAY</li>
+                            <li class="list-item">Servers, Storage, Networking</li>
+                        </ul>
+                        <a href="" class="btn btn-primary d-block">Check Our Inventory</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </seciton>
     <section class="slide-icon">
         <div class="container">
             <div class="main-slider">
