--- a/index.html
+++ b/index.html
@@ -58,20 +58,91 @@
         </div>
     </header>
     <seciton class="hero-sec">
-        <div class="single-slider">
+        <div style="margin-bottom: 0; padding-bottom: 0;" class="single-slider slider-full-width">
             <div class="slider-item" style="background-image: url('./assets/hero-bg.webp');">
                 <div class="container">
-                    <div class="content-wrapper">
-                        <span class="d-block text-primary font-neueplak-semibold">Save on IT Hardware with the Global Leader</span>
-                        <h1 class="main-title">Save on IT Hardware with the Global Leader</h1>
-                        <p>Servers, Storage, Networking & Parts, fully tested by the reuse leader.</p>
-                        <ul class="list-with-icon mb-3 font-neueplak-semibold">
-                            <li class="list-item">Trusted by thousands since 1995</li>
-                            <li class="list-item">Triple tested & guaranteed</li>
-                            <li class="list-item">Ready to Ship SAME DAY</li>
-                            <li class="list-item">Servers, Storage, Networking</li>
-                        </ul>
-                        <a href="" class="btn btn-primary d-block">Check Our Inventory</a>
+                    <div class="main-content">
+                        <div class="row gy-lg-0 gy-2">
+                            <div class="col-lg-6">
+                                <div class="content-wrapper">
+                                    <span class="d-block text-primary font-neueplak-semibold">Save on IT Hardware with
+                                        the
+                                        Global Leader</span>
+                                    <h1 class="main-title">Save on IT Hardware with the Global Leader 1</h1>
+                                    <p>Servers, Storage, Networking & Parts, fully tested by the reuse leader.</p>
+                                    <ul class="list-with-icon mb-3 font-neueplak-semibold">
+                                        <li class="list-item">Trusted by thousands since 1995</li>
+                                        <li class="list-item">Triple tested & guaranteed</li>
+                                        <li class="list-item">Ready to Ship SAME DAY</li>
+                                        <li class="list-item">Servers, Storage, Networking</li>
+                                    </ul>
+                                    <a href="" class="btn btn-primary d-block">Check Our Inventory</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="image-wrapper">
+                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380" alt="hero-image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slider-item" style="background-image: url('./assets/hero-bg.webp');">
+                <div class="container">
+                    <div class="main-content">
+                        <div class="row gy-lg-0 gy-2">
+                            <div class="col-lg-6">
+                                <div class="content-wrapper">
+                                    <span class="d-block text-primary font-neueplak-semibold">Save on IT Hardware with
+                                        the
+                                        Global Leader</span>
+                                    <h2 class="h1 main-title">Save on IT Hardware with the Global Leader 2</h2>
+                                    <p>Servers, Storage, Networking & Parts, fully tested by the reuse leader.</p>
+                                    <ul class="list-with-icon mb-3 font-neueplak-semibold">
+                                        <li class="list-item">Trusted by thousands since 1995</li>
+                                        <li class="list-item">Triple tested & guaranteed</li>
+                                        <li class="list-item">Ready to Ship SAME DAY</li>
+                                        <li class="list-item">Servers, Storage, Networking</li>
+                                    </ul>
+                                    <a href="" class="btn btn-primary d-block">Check Our Inventory</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="image-wrapper">
+                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380" alt="hero-image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slider-item" style="background-image: url('./assets/hero-bg.webp');">
+                <div class="container">
+                    <div class="main-content">
+                        <div class="row gy-lg-0 gy-2">
+                            <div class="col-lg-6">
+                                <div class="content-wrapper">
+                                    <span class="d-block text-primary font-neueplak-semibold">Save on IT Hardware with
+                                        the
+                                        Global Leader</span>
+                                    <h2 class="h1 main-title">Save on IT Hardware with the Global Leader 3</h2>
+                                    <p>Servers, Storage, Networking & Parts, fully tested by the reuse leader.</p>
+                                    <ul class="list-with-icon mb-3 font-neueplak-semibold">
+                                        <li class="list-item">Trusted by thousands since 1995</li>
+                                        <li class="list-item">Triple tested & guaranteed</li>
+                                        <li class="list-item">Ready to Ship SAME DAY</li>
+                                        <li class="list-item">Servers, Storage, Networking</li>
+                                    </ul>
+                                    <a href="" class="btn btn-primary d-block">Check Our Inventory</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="image-wrapper">
+                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380" alt="hero-image">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -104,7 +175,7 @@
         <div class="container">
             <div class="row gy-lg-0 gy-5">
                 <div class="col-lg-6">
-                    <img src="./assets/buying-server-img.webp" class="d-block mx-auto"
+                    <img src="./assets/buying-server-img.webp" class="d-block mx-auto img-fluid"
                         style="max-width: 500; border-radius: 8px; box-shadow: -12px 12px 0px var(--primary-light-2)"
                         width="500" height="390" alt="buying-server-image">
                 </div>
@@ -123,12 +194,12 @@
                                 <div href="#" class="btn btn-outline"><img src="./assets/phone-btn-icon.webp" width="16"
                                         height="16" alt="phone-icon">
                                     1-866-581-4540</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section class="client-sec">
         <div class="container">
@@ -324,7 +395,7 @@
     <section class="product-sec">
         <div class="container">
             <h2 class="main-title text-center mb-5">Latest Products</h2>
-            <div class="row g-2">
+            <div class="row g-2 mb-5">
                 <div class="col-md-6 col-lg-4">
                     <div class="card-1">
                         <img src="./assets/product-img.webp" class="img-fluid" width="347" height="208"
@@ -431,6 +502,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#" class="btn btn-primary d-block mx-auto">Explore Our Whole Inventory</a>
         </div>
     </section>
     <section style="background-color: var(--primary-light);" class="networking-sec">
@@ -541,7 +613,7 @@
                     reliability, custom configurations, parts responsiveness, lightning fast delivery, and wholesale
                     savings.</p>
             </div>
-            <div class="row g-2">
+            <div class="row g-2 mb-5">
                 <div class="col-lg-4 col-sm-6">
                     <div class="card-2">
                         <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp" class="img-fluid mb-1"
@@ -591,6 +663,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#" class="btn btn-primary d-block mx-auto">View More Resources</a>
         </div>
     </section>
     <section style="background-color: var(--primary-light-2);" class="business-sec">
@@ -643,60 +716,75 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-top">
-                <div class="row g-3">
+                <div class="row g-4">
                     <div class="col-lg-4 col-sm-6">
-                        <span class="d-block text-white fw-bold h5 mb-2">Patrick Rice Co.</span>
-                        <p class="text-white">Launch a business today with our help and get it done with amazing
-                            launch features, websites and more with uifry. </p>
-                    </div>
-                    <div class="col-lg-2 col-sm-6 col-6">
-                        <span class="d-block fw-bold text-white h6">Company</span>
-                        <ul class="footer-links">
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">home</a></li>
+                        <a class="d-block text-white fw-bold h5 mb-3">
+                            <img src="./assets/footer-logo.webp" width="183" height="71" alt="footer-logo">
+                        </a>
+                        <p class="text-white">Alta pays cash for your excess used server & IT equipment, either for
+                            purchase or trade-in.</p>
+                        <p class="text-white font-neueplak-semibold mb-4">We also offer ITAD services including data
+                            erasure/sanitization with full chain of custody.</p>
+                        <span class="d-block text-white font-neueplak-text-bold fs-20 mb-2">Follow Alta on:</span>
+                        <ul class="footer-social-links">
+                            <li><a href="#"><img src="./assets/facebook-icon.svg" width="12" height="22"
+                                        alt="facebook-icon"></a></li>
+                            <li><a href="#"><img src="./assets/instagram-icon.svg" width="22" height="22"
+                                        alt="instagram-icon"></a></li>
+                            <li><a href="#"><img src="./assets/youtube-icon.svg" width="30" height="21"
+                                        alt="youtube-icon"></a></li>
+                            <li><a href="#"><img src="./assets/linkdin-icon.svg" width="22" height="22"
+                                        alt="linkdin-icon"></a></li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-sm-6 col-6">
-                        <span class="d-block fw-bold text-white h6">Services</span>
+                        <span class="d-block fs-22 text-white font-neueplak-semibold mb-3">Get to Know Us</span>
                         <ul class="footer-links">
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">Certifications</a></li>
+                            <li><a href="#">Reviews</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-2 col-sm-6 col-6">
+                        <span class="d-block fs-22 text-white font-neueplak-semibold mb-3">Contact Us</span>
+                        <ul class="footer-links-1">
+                            <li><img src="./assets/phone-icon.svg" width="16" height="16" alt="phone-icon"><a
+                                    href="tel:+7634752900">763-475-2900</a></li>
+                            <li style="word-break: break-all;"><img src="./assets/envelop-icon.svg" width="18"
+                                    height="13" alt="phone-icon"><a
+                                    href="mailto:info@altatechnologies.com">info@altatechnologies.com</a></li>
+                            <li><img src="./assets/location-icon.svg" width="13" height="17" alt="phone-icon"><a
+                                    href="#">Alta Technologies, Inc 3850 Annapolis Ln N. Suite #100 Plymouth, MN
+                                    55447</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <span class="d-block fw-bold text-white h6">Let's Connect</span>
-                        <div class="footer-social-icons">
-                            <div class="icon">
-                                <img style="max-width: 12px;" src="./assets/img/facebook-footer-icon.webp"
-                                    class="img-fluid" width="12" height="14" alt="facebook-icon">
-                            </div>
-                            <div class="icon">
-                                <img style="max-width: 18px;" src="./assets/img/twitter-footer-icon.webp"
-                                    class="img-fluid" width="18" height="20" alt="twitter-icon">
-                            </div>
-                            <div class="icon">
-                                <img style="max-width: 18px;" src="./assets/img/linkdin-footer-icon.webp"
-                                    class="img-fluid" width="18" height="20" alt="linkdin-icon">
-                            </div>
-                            <div class="icon">
-                                <img style="max-width: 18px;" src="./assets/img/instagram-footer-icon.webp"
-                                    class="img-fluid" width="18" height="20" alt="instagram-icon">
-                            </div>
+                        <span class="d-block fs-22 text-white font-neueplak-semibold mb-3">Subscribe Our
+                            Newsletter</span>
+                        <p class="text-white">Subscribe to our mailing list for expert tips on refurbished servers, IT
+                            hardware trends, and industry updates.</p>
+                        <div class="input-wrapper mb-3">
+                            <input type="email" placeholder="Enter Your Email..." class="input-control">
                         </div>
+                        <a href="#" style="background-color: var(--secondary); margin-left: auto;"
+                            class="btn btn-primary d-block">Subscribe <img src="./assets/send-icon.svg" width="15"
+                                height="14" alt="send-icon"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="text-white mb-0">Copyright © Patrick Rice Co. - All Right Reserved</p>
-                <div class="d-flex gap-2 flex-wrap">
-                    <span class="d-block text-white">Privacy Policy |</span>
-                    <span class="d-block text-white">Cookie Policy |</span>
-                    <span class="d-block text-white">Refund Policy</span>
+                <div>
+                    <p class="text-white fs-18 mb-1">Copyright © 2024 Alta Technologies. All rights reserved.</p>
+                    <p style="color: gray;" class="mb-0">About being independent and not partnered with/affiliated with
+                        the various OEMs.</p>
                 </div>
+                <ul class="bottom-links">
+                    <a href="#" class="d-block text-white">Terms of Service</a>
+                    <a href="#" class="d-block text-white">Privacy Policy</a>
+                    <a href="#" class="d-block text-white">Cookie Policy</a>
+                </ul>
             </div>
         </div>
     </footer>
