--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
+    <link rel="stylesheet" href="./assets/products-sec.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
     <link rel="stylesheet" href="./assets/hero-sec.css">
     <link rel="stylesheet" href="./assets/storage-sec.css">
@@ -57,53 +58,90 @@
             </nav>
         </div>
     </header>
-    <seciton class="hero-sec">
-        <div style="margin-bottom: 0; padding-bottom: 0;" class="slider-full-width">
-            <div class="slider-item" style="background-image: url('./assets/hero-bg.webp');">
-                <div class="container">
-                    <div class="main-content">
-                        <div class="d-flex flex-wrap align-items-center fs-14 gap-1 mb-3">
-                            <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Home
-                                <img src="./assets/breadcrum-arrow.svg" width="14" height="8"
-                                    alt="arrow-icon"></a>
-                            <a href="/" style="color: #676767;"
-                                class="font-neueplak-regular d-block">Refurbished Lenovo Servers <img
-                                    src="./assets/breadcrum-arrow.svg" width="14" height="8"
-                                    alt="arrow-icon"></a>
-                            <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Used
-                                Lenovo Rackmount Servers <img src="./assets/breadcrum-arrow.svg" width="14"
-                                    height="8" alt="arrow-icon"></a>
-                            <span class="d-block text-primary font-neueplak-semibold">Lenovo
-                                ThinkServer RS160 Rackmount Server</span>
+    <seciton class="products-sec half-sec content-right">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center gap-1 fs-14 mb-3">
+                <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Home
+                    <img src="./assets/breadcrum-arrow.svg" width="14" height="8" alt="arrow-icon"></a>
+                <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Refurbished Lenovo Servers
+                    <img src="./assets/breadcrum-arrow.svg" width="14" height="8" alt="arrow-icon"></a>
+                <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Used
+                    Lenovo Rackmount Servers <img src="./assets/breadcrum-arrow.svg" width="14" height="8"
+                        alt="arrow-icon"></a>
+                <span class="d-block text-primary font-neueplak-semibold">Lenovo
+                    ThinkServer RS160 Rackmount Server</span>
+            </div>
+            <div class="row gy-lg-0 gy-3">
+                <div class="col-lg-6">
+                    <div class="image-wrapper d-flex flex-column gap-2 align-items-center">
+                        <img style="max-width: 557px; border-radius: 14px;" src="./assets/products-img-1.webp"
+                            class="img-fluid mx-auto d-block" width="557" height="540" alt="products-image">
+                        <div class="d-flex flex-wrap gap-1">
+                            <img style="border-radius: 6px;" src="./assets/products-small-img-1.webp" width="88"
+                                height="88" alt="products-image">
+                            <img style="border-radius: 6px;" src="./assets/products-small-img-2.webp" width="88"
+                                height="88" alt="products-image">
+                            <img style="border-radius: 6px;" src="./assets/products-small-img-3.webp" width="88"
+                                height="88" alt="products-image">
                         </div>
-                        <div class="row gy-lg-0 gy-5">
-                            <div class="col-lg-6">
-                                <div class="content-wrapper">
-                                    <h1 class="main-title">Refurbished Lenovo Servers</h1>
-                                    <p>Here, at Alta Technologies, we’re always looking to sell and purchase gear. Our
-                                        Lenovo
-                                        product managers are incredibly knowledgeable and offer competitive pricing.</p>
-                                    <p>We also have an experienced crew of technicians that handle Lenovo ThinkServers
-                                        and
-                                        ThinkSystems, you can rest assured that all the gear leaving our facility is
-                                        fully tested
-                                        and functional- whether it is full server builds, upgrades, or even parts, we
-                                        can help!</p>
-                                    <p>Alta Technologies offers a 1-year warranty on full configurations.  Request a
-                                        quote today or
-                                        call and ask one of our Lenovo Product Managers at 800-546-2582 to get a quote
-                                        within the
-                                        hour.</p>
-                                    <div class="d-flex gap-1 flex-wrap">
-                                        <a href="#" class="btn btn-primary d-block">Check Our Inventory</a>
-                                        <a href="#" class="btn btn-outline d-block">Request a Quote</a>
-                                    </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="content-wrapper">
+                        <h1 class="main-title">Dell Xkf54 Memory Riser 12 DIMM R920</h1>
+                        <span style="color: black;" class="d-block fs-18 mb-2">Dell Xkf54 Memory Riser 12 DIMM
+                            R920</span>
+                        <div class="d-flex flex-wrap align-items-center gap-1 mb-2">
+                            <div style="padding-right: 8px;border-right: 1px solid black;width: fit-content;"
+                                class="d-flex flex-wrap align-items-center gap-1">
+                                <div class="reviews-icon">
+                                    <img src="./assets/review-icon.svg" width="14" height="14" alt="reviews-icon">
+                                    <img src="./assets/review-icon.svg" width="14" height="14" alt="reviews-icon">
+                                    <img src="./assets/review-icon.svg" width="14" height="14" alt="reviews-icon">
+                                    <img src="./assets/review-icon.svg" width="14" height="14" alt="reviews-icon">
+                                    <img src="./assets/review-icon.svg" width="14" height="14" alt="reviews-icon">
+                                </div>
+                                <span class="d-block">(5.0)</span>
+                                <span class="d-block">325 Reviews</span>
+                            </div>
+                            <div class="d-flex align-items-center gap-1">
+                                <img src="./assets/question-icon.svg" class="d-block" width="18" height="17"
+                                    alt="question-icon">
+                                <span class="d-block">Questions Answered</span>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center gap-1 mb-2">
+                            <input type="radio" id="products-radio">
+                            <label for="products-radio">Only 12 left in stock.</label>
+                        </div>
+                        <div class="d-flex flex-wrap gap-2 align-items-center mb-2">
+                            <div class="products-price h2 text-primary">$29.99 USD</div>
+                            <div>
+                                <span class="d-block mb-1">Quantity:</span>
+                                <div class="d-flex flex-wrap align-items-center gap-1">
+                                    <span class="minus text-primary">-</span>
+                                    <span style="border-radius: 4px; padding: 2px 10px; border: 1px solid gray;"
+                                        class="quantity">01</span>
+                                    <span class="plus text-primary">+</span>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
-                                <div class="image-wrapper">
-                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="638" height="468"
-                                        alt="hero-image">
+                        </div>
+                        <div class="d-flex flex-wrap gap-1 mb-3">
+                            <a href="#" class="btn btn-primary d-block">Add to Cart</a>
+                            <a href="#" style="background-color: #5A31F4;" class="btn btn-primary d-block">Buy with <img
+                                    src="./assets/shop-pay-img.webp" width="82" height="18" alt="shop-pay-image"></a>
+                        </div>
+                        <div class="d-flex flex-wrap align-items-center gap-4">
+                            <a href="#" style="text-decoration: underline;" class="text-primary d-block">More Payment
+                                Options</a>
+                            <div class="d-flex align-items-center gap-1">
+                                <span style="color: #5A31F4;">Share:</span>
+                                <div style="gap: 2px;" class="d-flex">
+                                    <img src="./assets/products-twitter.svg" width="22" height="22" alt="social-icons">
+                                    <img src="./assets/products-instagram.svg" width="22" height="22" alt="social-icons">
+                                    <img src="./assets/products-facebook.svg" width="22" height="22" alt="social-icons">
+                                    <img src="./assets/products-envelop.svg" width="22" height="22" alt="social-icons">
+                                    <img src="./assets/products-youtube.svg" width="22" height="22" alt="social-icons">
                                 </div>
                             </div>
                         </div>
